--- a/Capstone/backend/config/config.env
+++ b/Capstone/backend/config/config.env
@@ -3,6 +3,6 @@ MONGO_URI=mongodb+srv://kanishk:kanishk@cluster0.fw7o55q.mongodb.net/?retryWrite
 JWT_SECRET=anappleadaykeepsdoctoraway
 JWT_EXPIRES=365d
 COOKIE_EXPIRE=5
-FRONTEND_URL=http://localhost:3001
+FRONTEND_URL=https://pay-band-project-vcrs.vercel.app/
 
 # MONGO_URI=mongodb+srv://sahilrashidganaie10:sahilrashidganaie10@cluster0.swxuogo.mongodb.net/?appName=Cluster0
